--- a/src/main_package/sample.fxml
+++ b/src/main_package/sample.fxml
@@ -5,7 +5,8 @@
 <?import javafx.scene.text.*?>
 
 <?import imports.NumberTextField?>
-<GridPane alignment="center" hgap="10" prefHeight="284.0" prefWidth="495.0" vgap="10" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main_package.MainController">
+<?import imports.NegativeNumberTextField?>
+<GridPane alignment="center" hgap="10" prefHeight="284.0" prefWidth="495.0" vgap="10" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main_package.MainController">
     <columnConstraints>
         <ColumnConstraints />
     </columnConstraints>
@@ -42,7 +43,7 @@
                 <Text layoutX="342.0" layoutY="141.0" strokeType="OUTSIDE" strokeWidth="0.0" text="To" />
                 <ComboBox fx:id="tempFromCB" layoutX="73.0" layoutY="154.0" prefWidth="150.0" promptText="1st unit" style="-fx-background-color: #d9d8d7;" AnchorPane.leftAnchor="73.0" AnchorPane.topAnchor="154.0" />
                 <ComboBox fx:id="tempToCB" layoutX="273.0" layoutY="154.0" prefWidth="150.0" promptText="2nd unit" style="-fx-background-color: #d9d8d7;" AnchorPane.rightAnchor="73.0" />
-                <NumberTextField fx:id="tempInputField" layoutX="172.0" layoutY="85.0" promptText="Enter value" AnchorPane.leftAnchor="172.0" AnchorPane.topAnchor="85.0" />
+                <NegativeNumberTextField fx:id="tempInputField" layoutX="172.0" layoutY="85.0" promptText="Enter value" AnchorPane.leftAnchor="172.0" AnchorPane.topAnchor="85.0" />
                 <Text layoutX="203.0" layoutY="66.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Enter your value:" AnchorPane.bottomAnchor="187.0" AnchorPane.leftAnchor="203.0" AnchorPane.rightAnchor="204.022265625" AnchorPane.topAnchor="53.05078125" />
             </AnchorPane>
         </Tab>
